--- a/templates/selectfolder.html
+++ b/templates/selectfolder.html
@@ -17,6 +17,14 @@
 		</button>
 	</div>
 </div>
+<!-- Current Folder Heading -->
+<div class="row gy-1">
+	<div class="card">
+		<div class="card-body">
+			<h3>{{ current_path }}</h3>
+		</div>
+	</div>
+</div>
 <!-- Folder Table -->
 <div class="row gy-1">
 	<div class="card">
