--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,9 @@
 				<a class="nav-link" href="/settings">Settings</a>
 			  </li>
 			  <li class="nav-item">
+				<a class="nav-link" href="/logs">Logs</a>
+			  </li>
+			  <li class="nav-item">
 				<a class="nav-link" href="/admin">Admin</a>
 			  </li>
 			</ul>
